--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 
   <section id="testimonials">
 
-    <h2>I no longer have to sniff other dogs for love. I've found the hottest Corgi on TinDog. Woof.</h2>
+    <h2>I no longer have to sniff other dogs for love. I've found the hottest Corgi on PrettyPuppy. Woof.</h2>
     <img src="images/dog-img.jpg" alt="dog-profile">
     <em>Pebbles, New York</em>
 
