--- a/index.html
+++ b/index.html
@@ -105,9 +105,9 @@
 
     <h2>I no longer have to sniff other dogs for love. I've found the hottest Corgi on PrettyPuppy. Woof.</h2>
     <img src="images/dog-img.jpg" alt="dog-profile">
-    <em>Pebbles, New York</em>
+    <em>Pebbles, Chickkamagaluru</em>
 
-    <!-- <h2 class="testimonial-text">My dog used to be so lonely, but with TinDog's help, they've found the love of their life. I think.</h2>
+    <!-- <h2 class="testimonial-text">My dog used to be so lonely, but with PrettyPuppy's help, they've found the love of their life. I think.</h2>
     <img class="testimonial-image" src="images/lady-img.jpg" alt="lady-profile">
     <em>Beverly, Illinois</em> -->
 
@@ -130,7 +130,7 @@
   <section id="pricing">
 
     <h2>A Plan for Every Dog's Needs</h2>
-    <p>Simple and affordable price plans for your and your dog.</p>
+    <p>Simple and affordable price plans for your dog.</p>
 
 
     <h3>Chihuahua</h3>
